just print coverage

--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -40,8 +40,9 @@ jobs:
 
     - name: Run Tarpaulin and Check Coverage
       run: |
-        cargo tarpaulin -v > tarpaulin-output.txt
-        if ! grep -q "100% coverage" tarpaulin-output.txt; then
-          echo "Coverage is below 100%"
-          exit 1
-        fi
+        # cargo tarpaulin > tarpaulin-output.txt
+        # if ! grep -q "100% coverage" tarpaulin-output.txt; then
+        #   echo "Coverage is below 100%"
+        #   exit 1
+        # fi
+        cargo tarpaulin
