--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,5 @@ path = "src/main.rs"
 [dependencies]
 tokio = { version = "1", features = ["full"] }
 strum = { version = "0.26", features = ["derive"] }
+scc = "2.1.0"
+ahash = "0.8.11"
